fix: sidebar overflow. use css to set height of content of sidebar to zero

--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -50,6 +50,10 @@
   background-color: var(--background-color);
 }
 
+.content {
+  height: 0;
+}
+
 .contact,
 .group {
   display: flex;
